# fxite

./: AUTHORS  CMakeLists.txt  CREDITS  ChangeLog  Makefile.am  README  TODO  aclocal.m4  bootstrap.sh  configure.ac  configure.in
fxscintilla/: CMakeLists.txt  COPYING  COPYRIGHTS  Catalogue.cxx  ChangeLog  FXScintilla.h  KeyWords.cxx  LexBash.cxx  Makefile.am  PlatFOX.cxx  Platform.h  ScintillaFOX.cxx  version.h
jef/: CMakeLists.txt  Makefile.am  cfg_theme.cpp  cfg_theme.h  color_funcs.cpp  color_funcs.h  compat.cpp  compat.h  ctokens.c  ctokens.h  desclistdlg.cpp  desclistdlg.h  dual_list.cpp  dual_list.h  histbox.cpp  histbox.h  ini_sort.c  interproc.cpp  interproc.h  mru_menu.cpp  mru_menu.h  popmenu.cpp  popmenu.h  run_unx.cpp  run_w32.cpp  runcmd.cpp  runcmd.h  setcolors.cpp  setcolors.h  shady_tabs.cpp  shady_tabs.h  theme.cpp  theme.h
lua/: CMakeLists.txt  Makefile.am  lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  lstrlib.c  (+16 more)
m4/: ChangeLog
mnumgr/: CMakeLists.txt  Makefile.am  cfg_keybind.cpp  cfg_keybind.h  cfg_popmenu.cpp  cfg_popmenu.h  cfg_shortcut.cpp  cfg_shortcut.h  cfg_toolbar.cpp  cfg_toolbar.h  color_funcs.h  menuspec.cpp  menuspec.h  prefdlg_kbnd.h  shmenu.cpp  shmenu.h  toolbar.cpp  toolbar.h  toolmgr.cpp  toolmgr.h  tooltree.cpp  tooltree.h
po/: ChangeLog  Makevars  POTFILES  POTFILES.in
src/: CMakeLists.txt  Makefile.am  appmain.cpp  appmain.h  appname.cpp  appname.h  appwin.cpp  appwin.h  appwin_base.cpp  appwin_base.h  appwin_ev.cpp  appwin_fn.cpp  appwin_mk.cpp  appwin_mnu.cpp  appwin_pub.cpp  appwin_pub.h  backup.cpp  backup.h  cmd_utils.cpp  cmd_utils.h  color_funcs.cpp  color_funcs.h  compat.cpp  compat.h  desclistdlg.cpp  desclistdlg.h  doctabs.cpp  doctabs.h  dual_list.cpp  dual_list.h  export.cpp  export.h  filedlg.cpp  filedlg.h  filer.cpp  filer.h  filterdlg.cpp  filterdlg.h  foreachtab.cpp  foreachtab.h  (+95 more)
src/languages/: Makefile.am  a68k.h  ada.h  asm.h  bash.h  batch.h  c.h  caml.h  cmake.h  cobol.h  conf.h  cpp.h  css.h  d.h  diff.h  docbook.h  erlang.h  errorlist.h  f77.h  flagship.h  fortran.h  freebasic.h  haskell.h  html.h  java.h  javascript.h  latex.h  lisp.h  lua.h  makefile.h  markdown.h  metapost.h  modula.h  pascal.h  perl.h  po.h  properties.h  ps.h  python.h  r.h  (+9 more)
util/: Embedded.properties  cleanup.sh  extra-info.lua  fox-minix.sh  get-lexer-info.lua  get-scite-props.lua  gettext.sh  htmlstyle.lua  langstyles.lua  lexall.sh  lexgen.lua  markdownstyle.lua  mkicon.sh  mkiface.lua  numdesc.list  scite-rip.sh  upd-sci.sh  wildcards.lua  wordlist.lua  write-lang-hdrs.lua
util/fox.diffs/: FXDir.cpp.diff  FXDirList.cpp.diff  FXFile.cpp.diff  FXFileList.cpp.diff  FXStat.cpp.diff  README
