noinst_LIBRARIES = libfxscintilla.a
libfxscintilla_a_CXXFLAGS = $(AM_CXXFLAGS) $(FOX_CFLAGS) -DSCI_LEXER -DFOX

libfxscintilla_a_SOURCES = \
version.h \
AutoComplete.cxx \
CallTip.cxx \
CellBuffer.cxx \
CharClassify.cxx \
ContractionState.cxx \
Decoration.cxx \
Document.cxx \
DocumentAccessor.cxx \
Editor.cxx \
ExternalLexer.cxx \
Indicator.cxx \
KeyMap.cxx \
KeyWords.cxx \
LexASY.cxx \
LexAda.cxx \
LexAsm.cxx \
LexAsn1.cxx \
LexBash.cxx \
LexBasic.cxx \
LexCLW.cxx \
LexCOBOL.cxx \
LexCPP.cxx \
LexCSS.cxx \
LexCaml.cxx \
LexCmake.cxx \
LexConf.cxx \
LexD.cxx \
LexErlang.cxx \
LexFlagship.cxx \
LexFortran.cxx \
LexHTML.cxx \
LexHaskell.cxx \
LexLisp.cxx \
LexLua.cxx \
LexMPT.cxx \
LexMagik.cxx \
LexMarkdown.cxx \
LexMetapost.cxx \
LexOthers.cxx \
LexPB.cxx \
LexPLM.cxx \
LexPOV.cxx \
LexPS.cxx \
LexPascal.cxx \
LexPerl.cxx \
LexPython.cxx \
LexR.cxx \
LexRuby.cxx \
LexSML.cxx \
LexSQL.cxx \
LexSmalltalk.cxx \
LexSorcus.cxx \
LexTCL.cxx \
LexTeX.cxx \
LexVHDL.cxx \
LexVerilog.cxx \
LexYAML.cxx \
LineMarker.cxx \
PerLine.cxx \
PlatFOX.cxx \
PositionCache.cxx \
PropSet.cxx \
RESearch.cxx \
RunStyles.cxx \
ScintillaBase.cxx \
ScintillaFOX.cxx \
Selection.cxx \
Style.cxx \
StyleContext.cxx \
UniConversion.cxx \
ViewStyle.cxx \
WindowAccessor.cxx \
XPM.cxx

noinst_HEADERS =  \
version.h \
Accessor.h \
AutoComplete.h \
CallTip.h \
CellBuffer.h \
CharClassify.h \
CharacterSet.h \
ContractionState.h \
Decoration.h \
Document.h \
DocumentAccessor.h \
Editor.h \
ExternalLexer.h \
FXScintilla.h \
FontQuality.h \
Indicator.h \
KeyMap.h \
KeyWords.h \
LineMarker.h \
Partitioning.h \
PerLine.h \
Platform.h \
PositionCache.h \
PropSet.h \
PropSetSimple.h \
RESearch.h \
RunStyles.h \
SVector.h \
SciLexer.h \
Scintilla.h \
ScintillaBase.h \
ScintillaWidget.h \
Selection.h \
SplitVector.h \
Style.h \
StyleContext.h \
UniConversion.h \
ViewStyle.h \
WindowAccessor.h \
XPM.h
