noinst_LIBRARIES = libfxscintilla.a
libfxscintilla_a_CXXFLAGS = $(AM_CXXFLAGS) $(FOX_CFLAGS) -DSCI_LEXER -DFOX

libfxscintilla_a_SOURCES = \
version.h \
Accessor.cxx \
AutoComplete.cxx \
CallTip.cxx \
Catalogue.cxx \
CellBuffer.cxx \
CharClassify.cxx \
CharacterSet.cxx \
ContractionState.cxx \
Decoration.cxx \
Document.cxx \
Editor.cxx \
ExternalLexer.cxx \
Indicator.cxx \
KeyMap.cxx \
LexA68k.cxx \
LexASY.cxx \
LexAda.cxx \
LexAsm.cxx \
LexAsn1.cxx \
LexBash.cxx \
LexBasic.cxx \
LexCLW.cxx \
LexCOBOL.cxx \
LexCPP.cxx \
LexCSS.cxx \
LexCaml.cxx \
LexCmake.cxx \
LexConf.cxx \
LexD.cxx \
LexErlang.cxx \
LexFlagship.cxx \
LexFortran.cxx \
LexHTML.cxx \
LexHaskell.cxx \
LexLaTeX.cxx \
LexLisp.cxx \
LexLua.cxx \
LexMPT.cxx \
LexMagik.cxx \
LexMarkdown.cxx \
LexMetapost.cxx \
LexModula.cxx \
LexOthers.cxx \
LexPB.cxx \
LexPLM.cxx \
LexPO.cxx \
LexPOV.cxx \
LexPS.cxx \
LexPascal.cxx \
LexPerl.cxx \
LexPython.cxx \
LexR.cxx \
LexRuby.cxx \
LexSML.cxx \
LexSQL.cxx \
LexSmalltalk.cxx \
LexSorcus.cxx \
LexTCL.cxx \
LexTeX.cxx \
LexTxt2tags.cxx \
LexVHDL.cxx \
LexVerilog.cxx \
LexYAML.cxx \
LexerBase.cxx \
LexerModule.cxx \
LexerNoExceptions.cxx \
LexerSimple.cxx \
LineMarker.cxx \
PerLine.cxx \
PlatFOX.cxx \
PositionCache.cxx \
PropSetSimple.cxx \
RESearch.cxx \
RunStyles.cxx \
ScintillaBase.cxx \
ScintillaFOX.cxx \
Selection.cxx \
Style.cxx \
StyleContext.cxx \
UniConversion.cxx \
ViewStyle.cxx \
WordList.cxx \
XPM.cxx

noinst_HEADERS =  \
version.h \
Accessor.h \
AutoComplete.h \
CallTip.h \
Catalogue.h \
CellBuffer.h \
CharClassify.h \
CharacterSet.h \
ContractionState.h \
Decoration.h \
Document.h \
Editor.h \
ExternalLexer.h \
FXScintilla.h \
FontQuality.h \
ILexer.h \
Indicator.h \
KeyMap.h \
LexAccessor.h \
LexerBase.h \
LexerModule.h \
LexerNoExceptions.h \
LexerSimple.h \
LineMarker.h \
OptionSet.h \
Partitioning.h \
PerLine.h \
Platform.h \
PositionCache.h \
PropSetSimple.h \
RESearch.h \
RunStyles.h \
SVector.h \
SciLexer.h \
Scintilla.h \
ScintillaBase.h \
ScintillaWidget.h \
Selection.h \
SparseState.h \
SplitVector.h \
Style.h \
StyleContext.h \
SubStyles.h \
UniConversion.h \
ViewStyle.h \
WordList.h \
XPM.h \
version.h
