INCLUDES = $(JEFFX_CFLAGS) $(FOX_CFLAGS) -I$(srcdir)/../src


noinst_LIBRARIES=libjeffx.a

libjeffx_a_SOURCES=\
  compat.cpp \
  desclistdlg.cpp \
  dual_list.cpp \
  histbox.cpp \
  ini_sort.c \
  interproc.cpp \
  run_unx.cpp \
  run_w32.cpp \
  runcmd.cpp \
  shady_tabs.cpp \
  sl.c


noinst_HEADERS=\
  compat.h \
  desclistdlg.h \
  dual_list.h \
  histbox.h \
  interproc.h \
  intl.h \
  runcmd.h \
  shady_tabs.h \
  sl.h

