AM_CPPFLAGS = $(JEFFX_CFLAGS) $(FOX_CFLAGS)


noinst_LIBRARIES=libjeffx.a

libjeffx_a_SOURCES=\
  cfg_theme.cpp \
  color_funcs.cpp \
  compat.cpp \
  desclistdlg.cpp \
  dual_list.cpp \
  histbox.cpp \
  ini_sort.c \
  interproc.cpp \
  listdlls.c \
  mru_menu.cpp \
  popmenu.cpp \
  run_unx.cpp \
  run_w32.cpp \
  runcmd.cpp \
  setcolors.cpp \
  shady_tabs.cpp \
  sl.c \
  theme.cpp


noinst_HEADERS=\
  cfg_theme.h \
  color_funcs.h \
  compat.h \
  desclistdlg.h \
  dual_list.h \
  histbox.h \
  interproc.h \
  intl.h \
  listdlls.h \
  mru_menu.h \
  popmenu.h \
  runcmd.h \
  setcolors.h \
  shady_tabs.h \
  sl.h \
  theme.h
