AM_CPPFLAGS = $(JEFFX_CFLAGS) $(FOX_CFLAGS)


noinst_LIBRARIES=libmnumgr.a

libmnumgr_a_SOURCES=\
menuspec.cpp \
cfg_keybind.cpp \
cfg_toolbar.cpp \
shmenu.cpp \
toolbar.cpp \
toolmgr.cpp \
tooltree.cpp

noinst_HEADERS=\
menuspec.h \
cfg_keybind.h \
cfg_toolbar.h \
shmenu.h \
toolbar.h \
toolmgr.h \
tooltree.h

