AM_CPPFLAGS = $(JEFFX_CFLAGS) $(FOX_CFLAGS)


noinst_LIBRARIES=libmnumgr.a

libmnumgr_a_SOURCES=\
cfg_keybind.cpp \
cfg_popmenu.cpp \
cfg_toolbar.cpp \
menuspec.cpp \
shmenu.cpp \
toolbar.cpp \
toolmgr.cpp \
tooltree.cpp

noinst_HEADERS=\
cfg_keybind.h \
cfg_popmenu.h \
cfg_toolbar.h \
menuspec.h \
shmenu.h \
toolbar.h \
toolmgr.h \
tooltree.h

