noinst_HEADERS=\
a68k.h \
ada.h \
asm.h \
bash.h \
batch.h \
c.h \
caml.h \
cmake.h \
cobol.h \
conf.h \
cpp.h \
css.h \
d.h \
diff.h \
docbook.h \
erlang.h \
errorlist.h \
f77.h \
flagship.h \
fortran.h \
freebasic.h \
haskell.h \
html.h \
java.h \
javascript.h \
latex.h \
lisp.h \
lua.h \
makefile.h \
markdown.h \
metapost.h \
modula.h \
pascal.h \
perl.h \
properties.h \
ps.h \
python.h \
r.h \
ruby.h \
smalltalk.h \
sql.h \
tcl.h \
tex.h \
txt2tags.h \
verilog.h \
vhdl.h \
xml.h
